--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "license": "ISC",
     "devDependencies": {
         "@types/jest": "^29.5.12",
+        "@types/memcached": "^2.2.10",
+        "@types/redis": "^4.0.11",
         "jest": "^29.7.0",
         "ts-jest": "^29.2.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4"
+    },
+    "dependencies": {
+        "memcached": "^2.2.2",
+        "redis": "^4.7.0"
     }
 }
