--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/amqplib": "^0.10.5",
         "@types/jest": "^29.5.12",
         "@types/memcached": "^2.2.10",
         "@types/redis": "^4.0.11",
@@ -20,7 +21,9 @@
         "typescript": "^5.5.4"
     },
     "dependencies": {
+        "amqplib": "^0.10.4",
         "memcached": "^2.2.2",
-        "redis": "^4.7.0"
+        "redis": "^4.7.0",
+        "rxjs": "^7.8.1"
     }
 }
